# MonoEmbedExample

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: main.cpp.E7E03A0CEFE5104C.idx
etc/: csharp-exe.cs
src/: main.cpp
